--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
           </div>
           <div id="chatbox" class="col-sm-12">
             <div class="form-group">
-              <input type="text" name="just-saying" value="" class="form-control" id="just-saying" placeholder="Write your comments here">
+              <input type="text" name="just-saying" value="" class="form-control" id="just-saying" placeholder="Write your comments here"><button id="just-saying-btn">Send!</button>
             </div>
           </div>
         </div>
